<resources>
    <string name="app_name">PineConnect</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="price_format">RM %1$.2f</string>
    <string name="origin_format">Origin: %1$s</string>
    <string name="size_format">Size: %1$s</string>
    <string name="rate_app">Rate App</string>
    <string name="share_app">Share App</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="terms_conditions">Terms and Conditions</string>
    <string name="feedback">Feedback</string>
    <string name="logout">Logout</string>


</resources>